# bytesandbrains

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  deny.toml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  publish-crates.yml
bb-codec/: Cargo.toml
bb-codec/src/: lib.rs
bb-codec/src/pq/: code.rs  distance.rs  mod.rs  sdc.rs
bb-codec/src/tq/: code.rs  codebook.rs
bb-compiler/: Cargo.toml
bb-compiler/src/: analyze_wire_edges.rs  artifact.rs  derive_wire_deadlines.rs  driver.rs  error.rs  expand_ops.rs  function_dedup.rs  gate_contract.rs  infer_peer_classes.rs  inline_for_partition.rs  insert_async_deadlines.rs  insert_backoff_gate_rx.rs  insert_backoff_gate_tx.rs  insert_dedup_gate_rx.rs  insert_peer_health_gate_rx.rs  insert_peer_health_gate_tx.rs  lib.rs  partition_by_wire_ops.rs  refine_polymorphic_value_info.rs  resolve_component_dependencies.rs  resolve_slots.rs  runner.rs  rx_chain.rs  stamp_compilation_metadata.rs  synthesize_wire_recvs.rs  type_solver.rs  validate.rs  validate_all_slots_bound.rs  validate_bootstrap_composition.rs  validate_runtime_complete.rs  verify_no_dangling_calls.rs
bb-core/: Cargo.toml  build.rs
bb-core/src/: address.rs  codec.rs  index.rs  lib.rs  op.rs  overlay.rs  peer.rs  peer_id.rs  peer_sampling.rs  pending_requests.rs
bb-core/src/embedding/: f32_cosine.rs  f32_l2.rs  mod.rs
bb-core/src/proto/: bb_core.proto  conversions.rs  mod.rs
bb-derive/: Cargo.toml
bb-derive/src/: codegen_shared.rs  lib.rs  parse.rs  roles.rs
bb-dsl/: Cargo.toml
bb-dsl/src/: concrete.rs  graph.rs  lib.rs  module.rs  output.rs  recorded.rs  syscalls.rs
bb-dsl/src/contracts/: mod.rs
bb-index/: Cargo.toml
bb-index/src/: flat.rs  lib.rs
bb-ir/: Cargo.toml  build.rs
bb-ir/proto/: bb_core.proto
bb-ir/src/: atomic.rs  component.rs  ids.rs  keys.rs  lib.rs  peer_class.rs  registry.rs  slot_value.rs  syscall_ids.rs  tensor.rs  tensor_primitives.rs  verify.rs  version.rs  wire.rs  wire_shape.rs
bb-ir/src/proto/: mod.rs  onnx_view.rs
bb-ir/src/types/: builtins.rs  common_relations.rs  lattice.rs  mod.rs  relations.rs  storage.rs
bb-ml/: Cargo.toml
bb-ml/src/: kmeans.rs  lib.rs
bb-ops/: Cargo.toml
bb-ops/src/: lib.rs
bb-ops/src/aggregators/: mod.rs
bb-ops/src/aggregators/fedavg/: mod.rs
bb-ops/src/backends/: mod.rs
bb-ops/src/backends/cpu/: graph_walker.rs  mod.rs  opset.rs  tensor.rs
bb-ops/src/backends/cpu/ops/: elementwise.rs  linalg.rs  mod.rs  shape.rs
bb-ops/src/network/: mod.rs
bb-ops/src/network/wire/: mod.rs
bb-ops/src/placeholders/: mod.rs
bb-ops/src/protocols/: mod.rs
bb-ops/src/protocols/constant_view/: mod.rs
bb-ops/src/protocols/global_registry/: mod.rs
bb-ops/src/syscalls/: mod.rs
bb-ops/src/syscalls/clock_rng/: clock.rs  deadline_match.rs  mod.rs  rng_u64.rs  sleep.rs  tests.rs
bb-ops/src/syscalls/composite/: bundle.rs  mod.rs  unbundle.rs
bb-ops/src/syscalls/coordination/: deadline_check.rs  mod.rs  tests.rs
bb-ops/src/syscalls/gates/: backoff_rx.rs  backoff_tx.rs  dedup_rx.rs  mod.rs  peer_health_rx.rs  peer_health_tx.rs
bb-ops/src/syscalls/lifecycle/: mod.rs  tests.rs
bb-ops/src/syscalls/peers/: insert.rs  insert_many.rs  lookup.rs  mod.rs
bb-ops/src/syscalls/structural/: mod.rs
bb-ops/src/syscalls/structural/constant/: mod.rs
bb-ops/src/syscalls/structural/pass_through/: mod.rs
bb-ops/src/syscalls/structural/tee/: mod.rs
bb-ops/src/syscalls/sync/: gate_dispatch.rs  mod.rs
bb-ops/src/syscalls/telemetry/: mod.rs  tests.rs
bb-ops/src/syscalls/triggers/: after.rs  event_source.rs  interval.rs  mod.rs  on_trigger.rs  pulse.rs  tests.rs
bb-overlay/: Cargo.toml  build.rs
bb-overlay/src/: lib.rs
bb-overlay/src/gossip/: README.md  config.rs  exchange.rs  mod.rs  peer.rs  selector.rs
bb-overlay/src/gossip/proto/: conversions.rs  gossip.proto  mod.rs
bb-runtime/: Cargo.toml
bb-runtime/src/: atomic.rs  bus.rs  completion.rs  component.rs  concrete.rs  envelope.rs  exec_state.rs  fallible.rs  ids.rs  ingress.rs  lib.rs  registry.rs  runtime.rs  slot_value.rs
bb-runtime/src/contracts/: aggregator.rs  backend.rs  backend_default_walk.rs  bootstrap.rs  codec.rs  data_source.rs  index.rs  mod.rs  model.rs  peer_selector.rs
bb-runtime/src/engine/: bootstrap.rs  call_context.rs  core.rs  dispatch_entry.rs  graph_slot.rs  invoke.rs  mod.rs  pending_async.rs  poll.rs  step.rs
bb-runtime/src/errors/: bootstrap.rs  delivery.rs  mod.rs  restore.rs  snapshot.rs
bb-runtime/src/framework/: address_book.rs  backoff_table.rs  backpressure_notice.rs  backpressure_tracker.rs  event_source.rs  hold_table.rs  inbound_dedup.rs  mod.rs  outbound_queue.rs  peer_gate.rs  peer_governor.rs  peer_state.rs  record_buffer.rs  request_tracker.rs  rng.rs  rtt_tracker.rs  scheduler.rs  serialize_queue.rs
bb-runtime/src/node/: config.rs  derivation.rs  mod.rs
bb-runtime/src/roles/: aggregator.rs  backend.rs  codec.rs  data_source.rs  index.rs  mod.rs  model.rs  peer_selector.rs  protocol.rs
bb-runtime/src/snapshot/: mod.rs  transient.rs
bb-runtime/src/syscall/: mod.rs  values.rs
bb-runtime/src/telemetry/: mod.rs  otel.rs
bytesandbrains/: Cargo.toml
bytesandbrains/src/: lib.rs
docs/: ADDRESSING.md  API_DESIGN.md  AUTHORING_COMPONENTS.md  COMPILER.md  CONTRACT_DISPATCH.md  DEPENDENCIES.md  DEPLOYMENT.md  ENGINE.md  EXAMPLES.md  IR_AND_DSL.md  ROLES.md  TOOLKIT.md  TYPES.md  WIRE.md
examples/: README.md  component_with_dependency.rs  custom_compiler_pass.rs  custom_index_hnsw.rs  federated_learning.rs  multi_target_network.rs  polymorphic_types.rs  quickstart.rs  single_node_federated_learning.rs
examples/common/: mod.rs
scripts/: extract_inline_tests.py  strip_test_refs.py
src/: install.rs  lib.rs
