# bb-dsl — authoring surface for the bytesandbrains framework.
#
# Hosts the Module trait, Graph recorder, Output handles, Contract
# traits, placeholder types, and DSL-side network helpers
# (`net::send` / `net::recv`). The Module trait's `build()`
# returns a `RecordedModule` that the compiler consumes.
#
# Depends on: bb-ir (foundation), bb-runtime (ConcreteComponent +
# HandleRef for the recorder's identity-capture helpers).

[package]
name          = "bb-dsl"
description   = "Authoring DSL for the bytesandbrains framework — Module trait, Graph, Output, contracts, placeholders, concrete-component plumbing."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true

[lib]

[dependencies]
bb-ir      = { path = "../bb-ir", version = "0.3.4" }
bb-runtime = { path = "../bb-runtime", version = "0.3.4" }
serde      = { workspace = true }
bincode    = { workspace = true }
