[package]
name = "bytesandbrains-overlay"
version = "0.2.2"
edition = "2021"
description = "Overlay protocol implementations for BytesAndBrains"
license = "GPL-2.0"

[package.metadata.docs.rs]
features = ["gossip", "proto", "codec"]

[features]
default = []
gossip = []
proto = ["dep:prost", "bb_core/proto", "bb_codec?/proto"]
codec = ["dep:bb_codec", "bb_codec?/codec"]
full = ["gossip", "proto", "codec"]

[dependencies]
bb_core = { package = "bytesandbrains-core", version = "0.2.2", path = "../bb-core" }
bb_codec = { package = "bytesandbrains-codec", version = "0.2.2", path = "../bb-codec", optional = true }
rand = "0.8"
tracing = "0.1"
prost = { version = "0.13", optional = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
rand = "0.8"
bb_index = { package = "bytesandbrains-index", version = "0.2.2", path = "../bb-index" }
